--- a/Alicargo/Resources/Validation.resx
+++ b/Alicargo/Resources/Validation.resx
@@ -118,18 +118,18 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="EmplyPassword" xml:space="preserve">
-    <value>Задайте пароль</value>
+    <value>Define a password</value>
   </data>
   <data name="LoginExists" xml:space="preserve">
-    <value>Логин занят</value>
+    <value>Login is occupied</value>
   </data>
   <data name="AirWaybillAlreadyExists" xml:space="preserve">
-    <value>Такой Air Way Bill уже добавлен</value>
+    <value>This Air Waybill is already added</value>
   </data>
   <data name="WrongLoginOrPassword" xml:space="preserve">
-    <value>Неверный логин или пароль</value>
+    <value>Invalid login or password</value>
   </data>
   <data name="StateIsUsed" xml:space="preserve">
-    <value>Статус исполользуется</value>
+    <value>State is used</value>
   </data>
 </root>
