renamed email field in client

--- a/Alicargo.Core/Resources/Entities.resx
+++ b/Alicargo.Core/Resources/Entities.resx
@@ -447,4 +447,7 @@
   <data name="Subject" xml:space="preserve">
     <value>Subject</value>
   </data>
+  <data name="Emails" xml:space="preserve">
+    <value>Emails</value>
+  </data>
 </root>
