--- a/Alicargo.Core/Resources/Entities.ru.resx
+++ b/Alicargo.Core/Resources/Entities.ru.resx
@@ -453,4 +453,19 @@
   <data name="Emails" xml:space="preserve">
     <value>Электронные адреса</value>
   </data>
+  <data name="Balance" xml:space="preserve">
+    <value>Баланс</value>
+  </data>
+  <data name="Comment" xml:space="preserve">
+    <value>Комментарий</value>
+  </data>
+  <data name="Input" xml:space="preserve">
+    <value>Ввод</value>
+  </data>
+  <data name="Timestamp" xml:space="preserve">
+    <value>Время</value>
+  </data>
+  <data name="Money" xml:space="preserve">
+    <value>Деньги</value>
+  </data>
 </root>
